make changes for linter
